--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Webradio</title>
+    <title>webradio</title>
     <base href="/">
+    <meta http-equiv="Content-Security-Policy" content="media-src http://www.partyviberadio.com:*">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="manifest" href="manifest.webmanifest">
