add pack change to json

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>webradio</title>
     <base href="/">
-    <meta http-equiv="Content-Security-Policy" content="media-src http://www.partyviberadio.com:*">
+    <!-- <meta http-equiv="Content-Security-Policy" content="media-src http://www.partyviberadio.com:*"> -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
