--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 
 <head>
     <meta charset="utf-8">
     <title>webradio</title>
     <base href="/">
-    <!-- <meta http-equiv="Content-Security-Policy" content="media-src http://www.partyviberadio.com:*"> -->
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="manifest" href="manifest.webmanifest">
-    <meta name="theme-color" content="#1976d2">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
+    <meta name="theme-color" content="#303030">
+        <meta http-equiv="Content-Security-Policy" content="media-src http://www.partyviberadio.com:8040/* http://www.partyviberadio.com:8004/* http://149.56.157.81:8431/* http://192.99.150.31:9083/* http://chicago.discovertrance.com:9216/* http://icecast.ofdoom.com:8000/* http://www.partyviberadio.com:8046/* http://pulseedm.cdnstream1.com:8124/* https://stream.sunshine-live.de/* http://stream.electroradio.fm/* http://relay01.t4e.dj/* http://swr-dasding-live.cast.addradio.de/* http://stream.dubbase.fm:7004/* http://tuner.m1.fm/* http://ice1.somafm.com/* http://87.230.103.58/* http://mp3.channels.webradio.antenne.de/* http://194.232.200.156:8000/* http://streaming208.radionomy.com/* http://cdn-icast.radyofenomen.com/* http://31.210.157.109/* http://mp3.ffh.de/* http://mp3.planetradio.de/* http://stream01.iloveradio.de/* http://pianosolo.streamguys.net/* http://109.123.116.202:8020/*"> 
+ </head>
 
 <body class="mat-app-background">
     <app-root></app-root>
