--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#303030">
         <meta http-equiv="Content-Security-Policy" content="media-src * "> 
  </head>
